<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/sso_accounts_margin_left" android:layout_marginBottom="15.0dip" android:text="@string/sso_accounts_platform_login_" style="@style/Account_TextView_Hint" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/sso_accounts_tv_login_360" android:text="@string/sso_accounts_login_360" android:drawableTop="@drawable/sso_accounts_selector_360" style="@style/Account_TextView_Third_Login" />
        <TextView android:id="@id/sso_accounts_tv_login_weixin" android:text="@string/sso_accounts_login_weixin" android:drawableTop="@drawable/sso_accounts_selector_ic_weixin" style="@style/Account_TextView_Third_Login" />
        <TextView android:id="@id/sso_accounts_tv_login_qq" android:text="@string/sso_accounts_login_qq" android:drawableTop="@drawable/sso_accounts_selector_ic_qq" style="@style/Account_TextView_Third_Login" />
        <TextView android:id="@id/sso_accounts_tv_login_weibo" android:text="@string/sso_accounts_login_weibo" android:drawableTop="@drawable/sso_accounts_selector_ic_weibo" style="@style/Account_TextView_Third_Login" />
    </LinearLayout>
</LinearLayout>