<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.ludashi.benchmark.ui.view.NaviBar android:id="@id/navibar" android:background="#ffeb2617" app:buttonCount="Two" app:TitleText="@string/reveal_lucky_money" style="@style/CommonNaviBar" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:background="@drawable/lucky_money_fragments_star" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/iv_banner" android:layout_width="fill_parent" android:layout_height="@dimen/bannerHeight" android:src="@drawable/reveal_pocket_header_bg" android:scaleType="fitXY" />
            <ImageView android:id="@id/iv_money_appicon" android:background="@drawable/s_round_white_btn" android:padding="17.0dip" android:layout_width="85.0dip" android:layout_height="85.0dip" android:layout_marginTop="@dimen/iconMarginTop" android:src="@drawable/icon" android:layout_centerHorizontal="true" />
        </RelativeLayout>
        <TextView android:textSize="17.0dip" android:textColor="@color/default_black_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/lucky_money_caption1_marginTop" android:layout_marginBottom="@dimen/lucky_money_caption1_marginBottom" android:text="@string/you_download" />
        <TextView android:textSize="22.0dip" android:textColor="@color/lucky_money_red" android:id="@id/tv_downloaded_appname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name" />
        <TextView android:textSize="17.0dip" android:textColor="@color/default_black_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/lucky_money_caption_marginTop" android:layout_marginBottom="@dimen/lucky_money_caption_marginBottom" android:text="@string/got_money" />
        <TextView android:textSize="42.0dip" android:textColor="@color/lucky_money_red" android:id="@id/tv_money_amount" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/lucky_money_margin_top" android:text="@string/lucky_money_amount" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/share_wrapper" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <Button android:textSize="15.0dip" android:textColor="@color/lucky_money_red" android:id="@id/btn_share_luckymoney" android:background="@drawable/s_rect_red_line" android:paddingLeft="@dimen/lucky_money_share_padding" android:paddingTop="10.0dip" android:paddingRight="@dimen/lucky_money_share_padding" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/lucky_money_share_margin" android:layout_marginRight="@dimen/lucky_money_share_margin" android:text="@string/share_my_money_1" android:layout_weight="1.0" />
            <Button android:textSize="15.0dip" android:textColor="@color/share_text_color" android:id="@id/btn_share_luckymoney_fake" android:background="@drawable/s_round_rect_red" android:paddingLeft="@dimen/lucky_money_share_padding" android:paddingTop="10.0dip" android:paddingRight="@dimen/lucky_money_share_padding" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/lucky_money_share_margin" android:layout_marginRight="@dimen/lucky_money_share_margin" android:text="@string/share_my_money_2" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/ll_failed_wrapper" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="15.0dip" android:textColor="@color/default_black_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/overchance" />
            <TextView android:textSize="15.0dip" android:textColor="@color/lucky_money_red" android:id="@id/tv_more_apps" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/continue_download_apps" />
        </LinearLayout>
    </LinearLayout>
    <View android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
    <TextView android:textSize="14.0dip" android:textColor="#ffaaaaaa" android:gravity="center_vertical" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/subcaptionMarginBottom" android:text="@string/you_could_fuck_after_got_money" />
    <LinearLayout android:orientation="horizontal" android:background="#fffafafa" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/ll_acc" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/phone_acc" />
            <TextView android:textSize="15.0dip" android:textColor="#ff303030" android:paddingTop="7.0dip" android:paddingBottom="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/phone_acc" />
            <TextView android:textSize="10.0dip" android:textColor="#ff999999" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/phone_acc_desc" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/ll_clear" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/phone_clear" />
            <TextView android:textSize="15.0dip" android:textColor="#ff303030" android:paddingTop="7.0dip" android:paddingBottom="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/phone_clear" />
            <TextView android:textSize="10.0dip" android:textColor="#ff999999" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/phone_clear_desc" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/ll_cooling" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/phone_cooling" />
            <TextView android:textSize="15.0dip" android:textColor="#ff303030" android:paddingTop="7.0dip" android:paddingBottom="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/phone_cooling" />
            <TextView android:textSize="10.0dip" android:textColor="#ff999999" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/phone_cooling_desc" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>