<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/rl_ranking_wrapper" android:background="#fffafafa" android:paddingLeft="15.0dip" android:paddingTop="12.0dip" android:paddingRight="15.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="#ff7c7c7c" android:id="@id/tv_ranking_num" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ue_ranking_num" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
    <TextView android:textColor="#ff7c7c7c" android:id="@id/tv_ranking_rate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/ue_ranking_rate" android:layout_below="@id/tv_ranking_num" />
    <Button android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/btn_ranking_detail" android:background="@drawable/btn_bg_green" android:paddingLeft="12.0dip" android:paddingRight="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ranking_hall" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    <TextView android:textColor="#ff7c7c7c" android:gravity="center" android:id="@id/gpu_force_instruction" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/force_gpu_render_prompt" android:layout_centerInParent="true" />
</RelativeLayout>